fix: fonts on Safari

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,6 +1,6 @@
 :root {
-    --sl-font: "Geist Sans";
-    --sl-font-mono: "Geist Mono";
+    --sl-font: '"Geist Sans"';
+    --sl-font-mono: '"Geist Mono"';
 }
 
 /* Dark mode colors. */
